--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "types": [
+      "node"
+    ],
     "target": "es2022",
     "module": "commonjs",
     "strict": true,
