--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
     "aws-sdk": "^2.1692.0",
     "constructs": "^10.4.2",
     "lodash": "^4.17.21",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "railway-ticketing-app-sdk": "file:../sdk"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.147",
