--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,7 @@
     "constructs": "^10.4.2",
     "lodash": "^4.17.21",
     "zod": "^3.24.2",
-    "railway-ticketing-app-sdk": "file:../sdk"
+    "railway-ticketing-app-sdk": "^1.0.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.147",
