--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
-    "railway-ticketing-app-sdk": "file:../sdk"
+    "railway-ticketing-app-sdk": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
