--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "lint": "npm-run-all --parallel lint:*",
     "lint:next": "next lint",
     "lint:eslint": "eslint . --ext .ts,.tsx",
-    "lint:typecheck": "tsc --noEmit"
+    "lint:typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -22,25 +25,33 @@
     "next": "^15.2.4",
     "next-themes": "^0.4.6",
     "npm-run-all": "^4.1.5",
+    "railway-ticketing-app-sdk": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "railway-ticketing-app-sdk": "^1.0.0"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.9",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^4.0.9",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
