test: cdk, script and core folders tests for backend

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
     "types": [
-      "node"
+      "node",
+      "jest"
     ],
+    "isolatedModules": true,
     "target": "es2022",
     "module": "commonjs",
     "strict": true,
