--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,10 @@
     "deploy": "npm run build && cdk deploy",
     "destroy": "cdk destroy",
     "diff": "cdk diff",
-    "seed": "ts-node scripts/seed-trains.ts"
+    "seed": "ts-node scripts/seed-trains.ts",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -26,19 +29,24 @@
     "@middy/http-json-body-parser": "^6.0.0",
     "@middy/http-response-serializer": "^6.0.0",
     "@middy/http-urlencode-path-parser": "^6.0.0",
-    "aws-cdk-lib": "^2.180.0",
     "aws-sdk": "^2.1692.0",
     "constructs": "^10.4.2",
     "lodash": "^4.17.21",
-    "zod": "^3.24.2",
-    "railway-ticketing-app-sdk": "^1.0.0"
+    "railway-ticketing-app-sdk": "^1.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.6.0",
     "@types/aws-lambda": "^8.10.147",
+    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.15",
     "@types/node": "^22.13.4",
-    "aws-cdk": "^2.1000.3",
+    "aws-cdk": "^2.1006.0",
+    "aws-cdk-lib": "^2.186.0",
     "esbuild": "^0.25.0",
+    "jest": "^29.7.0",
+    "jest-cdk-snapshot": "^2.2.5",
+    "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
