--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.6.0",
+    "@swc/jest": "^0.2.37",
     "@types/aws-lambda": "^8.10.147",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.15",
